gcc-14.2.0/libgo/misc/cgo/errors/testdata/issue14669.go
version https://git-lfs.github.com/spec/v1
oid sha256:24f00b3b819ab350fdeaad8e0d3df99b1881cad55cfa75d643936b5c9ae3755f
size 368
